benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignums_Sub_iter2_error.log
=== Verification Error - Iteration 2 ===
File: benchmarks/verus/bignum/files/bignums_Sub.rs
Time: 2025-09-15 10:56:35

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0277]: the trait bound `std::iter::Rev<std::ops::Range<usize>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignums_Sub_impl.rs:52:5
   |
52 | /     for i in (0..max_len).rev() {
53 | |         let b1 = vec1[i] as i32 - ('0' as i32);
54 | |         let b2 = vec2[i] as i32 - ('0' as i32);
55 | |         let mut current = b1 - b2 - borrow;
...  |
63 | |         res_vec.push(char_digit);
64 | |     }
   | |_____^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::ops::Range<usize>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error[E0277]: the trait bound `std::iter::Rev<std::ops::Range<usize>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignums_Sub_impl.rs:52:14
   |
52 |     for i in (0..max_len).rev() {
   |              ^^^^^^^^^^^^^^^^^^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::ops::Range<usize>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.

--------------------------------------------------------------------------------

Additional Output:
error[E0277]: the trait bound `std::iter::Rev<std::ops::Range<usize>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignums_Sub_impl.rs:52:5
   |
52 | /     for i in (0..max_len).rev() {
53 | |         let b1 = vec1[i] as i32 - ('0' as i32);
54 | |         let b2 = vec2[i] as i32 - ('0' as i32);
55 | |         let mut current = b1 - b2 - borrow;
...  |
63 | |         res_vec.push(char_digit);
64 | |     }
   | |_____^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::ops::Range<usize>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error[E0277]: the trait bound `std::iter::Rev<std::ops::Range<usize>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignums_Sub_impl.rs:52:14
   |
52 |     for i in (0..max_len).rev() {
   |              ^^^^^^^^^^^^^^^^^^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::ops::Range<usize>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
